improve openapi documentation
add error codes thrown by the endpoints
